# wings

./: AGENTS.md  Cargo.toml  Justfile  LICENSE.txt  README.md  flake.nix
crates/client/: Cargo.toml
crates/client/src/: encode.rs  error.rs  fetch.rs  lib.rs  push.rs
crates/common/data-lake/: Cargo.toml
crates/common/data-lake/src/: delta.rs  lib.rs  parquet.rs
crates/common/dst-base/: Cargo.toml
crates/common/dst-base/src/: clock.rs  id.rs  lib.rs  rng.rs
crates/common/object-store/: Cargo.toml
crates/common/object-store/src/: cloud.rs  lib.rs  local.rs  memory.rs  paths.rs
crates/common/observability/: Cargo.toml
crates/common/observability/src/: error.rs  format.rs  lib.rs  metrics.rs
crates/common/resources/: Cargo.toml
crates/common/schema/: Cargo.toml  build.rs
develop/: mock.json  push.sh  (+5 more)
wings/: Cargo.toml
wings/src/: admin.rs  cluster.rs  debug_data.rs  dev.rs  error.rs  fetch.rs  flight.rs  helpers.rs  http_client.rs  lib.rs  main.rs  object_store.rs  observability.rs  push.rs  remote.rs  server.rs  sql.rs
wings/src/cmd/: broker.rs  mod.rs
wings_client/: Cargo.toml
wings_client/src/: client.rs  encode.rs  error.rs  fetch.rs  lib.rs  metadata.rs  push.rs
wings_common/: Cargo.toml
wings_common/src/: clock.rs  id.rs  lib.rs
wings_control_plane/: Cargo.toml  build.rs
wings_control_plane/proto/schema/: arrow_type.proto
wings_control_plane/proto/wings/: cluster_metadata.proto  log_metadata.proto
wings_control_plane/src/: cache.rs  lib.rs  paths.rs  protocol.rs  resource.rs
wings_control_plane/src/admin/: error.rs  helpers.rs  memory.rs  mod.rs  proto.rs  server.rs  stream.rs  types.rs
wings_control_plane/src/cluster_metadata/: cache.rs  error.rs  helpers.rs  memory.rs  metrics.rs  mod.rs  stream.rs
wings_control_plane/src/data_lake/: delta.rs  error.rs  mod.rs  parquet.rs
wings_control_plane/src/log_metadata/: error.rs  memory.rs  mod.rs  stream.rs  timestamp.rs
wings_control_plane/src/object_store/: cloud.rs  local.rs  mod.rs
wings_control_plane/src/offset_registry/: memory.rs  proto.rs  timestamp.rs
wings_control_plane/src/parquet/: error.rs  mod.rs  parquet_name_index.rs  stats.rs  writer.rs
wings_control_plane/src/resources/: credential.rs  data_lake.rs  mod.rs  name.rs  namespace.rs  object_store.rs  object_store_credential.rs  partition.rs  secret.rs  tenant.rs  topic.rs
wings_control_plane/src/schema/: conversion.rs  data_type.rs  datum.rs  delta.rs  error.rs  from_proto.rs  mod.rs  to_proto.rs  visitor.rs
wings_control_plane/tests/: test_parquet_writer.rs
wings_control_plane_core/: Cargo.toml  build.rs
wings_control_plane_core/src/: lib.rs  status.rs
wings_control_plane_core/src/cluster_metadata/: cache.rs  error.rs  mod.rs  stream.rs
wings_control_plane_core/src/log_metadata/: error.rs  mod.rs  stream.rs  timestamp.rs  validation.rs
wings_control_plane_core/src/pb/: cluster_metadata.rs  log_metadata.rs  mod.rs  schema.rs
wings_control_plane_memory/: Cargo.toml
wings_control_plane_memory/src/: cluster_metadata.rs  lib.rs
wings_control_plane_memory/src/log_metadata/: candidate.rs  mod.rs  page.rs  partition.rs  topic.rs
wings_control_plane_sql/: Cargo.toml
wings_control_plane_sql/src/: cluster_metadata.rs  lib.rs  log_metadata.rs
wings_control_plane_sql/src/db/: error.rs  mod.rs  partition_key.rs
wings_control_plane_sql/tests/: common.rs  db_data_lake.rs  db_namespace.rs  db_object_store.rs  db_tenant.rs  db_topic.rs
wings_data_lake/: Cargo.toml
wings_data_lake/src/: delta.rs  error.rs  lib.rs  parquet.rs
wings_data_lake/src/parquet_writer/: error.rs  mod.rs
wings_data_lake/tests/: test_parquet_writer.rs
wings_flight/: Cargo.toml  build.rs
wings_flight/src/: error.rs  flight_sql_server.rs  ingestion.rs  lib.rs  ticket.rs
wings_ingestor_core/: Cargo.toml
wings_ingestor_core/src/: batch.rs  client.rs  error.rs  ingestor.rs  lib.rs  namespace_writer.rs  partition_writer.rs  request.rs  response.rs  test_utils.rs  types.rs  uploader.rs  write.rs
wings_ingestor_core/src/batcher/: metrics.rs  mod.rs  partition.rs
wings_ingestor_core/tests/: common.rs  test_ingestion.rs  test_partitioned_ingestion.rs  test_simple_ingestion.rs
wings_ingestor_http/: Cargo.toml
wings_ingestor_http/src/: error.rs  lib.rs  push.rs  types.rs
wings_object_store/: Cargo.toml
wings_object_store/src/: cloud.rs  lib.rs  local.rs  paths.rs
wings_observability/: Cargo.toml
wings_observability/src/: error.rs  format.rs  lib.rs  metrics.rs
wings_push_client/: Cargo.toml
wings_push_client/src/: http.rs  lib.rs
wings_query/: Cargo.toml
wings_query/src/: lib.rs  topic.rs
wings_queue/: Cargo.toml  build.rs
wings_queue/proto/: queue.proto
wings_queue/src/: broker.rs  client.rs  lib.rs  manifest.rs  manifest_store.rs  pb.rs  service.rs
wings_resources/: Cargo.toml
wings_resources/src/: data_lake.rs  lib.rs  name.rs  namespace.rs  object_store.rs  partition.rs  topic.rs
wings_schema/: Cargo.toml
wings_schema/src/: data_type.rs  error.rs  lib.rs
wings_schema/tests/: common.rs  data_type_test.rs  datum_test.rs  error_test.rs  schema_test.rs  visitor_test.rs
wings_server_core/: Cargo.toml
wings_server_core/src/: error.rs  fetcher.rs  folio_reader.rs  lib.rs  options.rs
wings_server_core/src/query/: helpers.rs  mod.rs  namespace_provider.rs  topic.rs
wings_server_core/src/system_tables/: helpers.rs  metrics.rs  mod.rs  namespace_info.rs  provider.rs  topic.rs  topic_offset_location.rs  topic_partition_value.rs  topic_schema.rs
wings_server_core/tests/: common.rs  test_namespace_provider.rs  test_partitioned_query.rs  test_query_helpers.rs  test_simple_query.rs
wings_server_http/: Cargo.toml
wings_server_http/src/: error.rs  fetch.rs  lib.rs  types.rs
wings_stress/: Cargo.toml
wings_stress/src/: conversions.rs  error.rs  generators.rs  helpers.rs  log.rs  main.rs  run.rs
wings_stress/src/cmd/: mod.rs  queue.rs
wings_worker/: Cargo.toml
wings_worker/src/: error.rs  lib.rs  worker.rs
wings_worker/src/tasks/: commit.rs  compaction.rs  create_table.rs  mod.rs
(+278 files in other folders)
