[workspace.package]
edition = "2024"
authors = ["Francesco Ceccon", "The Wings contributors"]
repository = "https://github.com/useairfoil/wings"
license = "Apache-2.0"

[workspace]
resolver = "2"
# default-members = ["bin/wings"]
members = [
    "bin/wings",
    "crates/common/dst-base",
    "crates/common/observability",
    "crates/common/resources",
    "crates/common/schema",
    "crates/common/secret-manager",
    "crates/server/cluster",
    "crates/storage/delta-log",
    "crates/storage/meta-db",
]

[profile.maxperf]
inherits = "release"
codegen-units = 1
lto = "fat"
incremental = false

[workspace.dependencies]
arrow = "57.0.0"
arrow-cast = "57.0.0"
arrow-flight = { version = "57.0.0", features = ["flight-sql"] }
arrow-ipc = "57.0.0"
arrow-json = "57.0.0"
arrow-schema = "57.0.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.0"
bytesize = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = [
    "derive",
    "env",
    "cargo",
    "unicode",
    "color",
    "unstable-styles",
] }
ctrlc = { version = "3.4.7", features = ["termination"] }
dashmap = "6.1.0"
datafusion = "52.1.0"
deltalake-aws = "0.13.0"
deltalake-core = "0.30.1"
duration-str = "0.17.0"
flatbuffers = "25.2.10"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
iceberg = "0.8.0"
insta = { version = "1.47.2", features = ["yaml", "redactions"] }
moka = { version = "0.12.10", features = ["future"] }
mockall = "0.14.0"
nu-ansi-term = "0.46"
object_store = { version = "0.12.2", features = ["aws", "azure", "gcp"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "rt-tokio", "experimental_metrics_custom_reader"] }
parquet = "57.0.0"
paste = "1.0.15"
percent-encoding = "2.3.2"
pin-project = "1.1.10"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.10"
reqwest = { version = "0.13", features = [
    "json",
    "rustls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slatedb-txn-obj = "0.13.0"
snafu = "0.8.0"
strum = { version = "0.28.0", features = ["derive"] }
tabled = "0.20.0"
tempfile = "3.0"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread", "test-util"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["time"] }
tonic = "0.14.2"
tonic-reflection = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tower = "0.5"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "env-filter",
    "json",
] }
ulid = "1.2.1"
url = "2.5.4"
uuid = "1.19.0"
wings-client = { path = "crates/client" }
wings-data-lake = { path = "crates/common/data-lake" }
wings-dst-base = { path = "crates/common/dst-base" }
wings-meta-db = { path = "crates/storage/meta-db" }
wings-object-store = { path = "crates/common/object-store" }
wings-observability = { path = "crates/common/observability" }
wings-query = { path = "crates/common/query" }
wings-resources = { path = "crates/common/resources" }
wings-schema = { path = "crates/common/schema" }
wings-secret-manager = { path = "crates/common/secret-manager" }
wings-server-cluster = { path = "crates/server/cluster" }
