[package]
name = "wings"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wings"
path = "src/main.rs"

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
axum.workspace = true
bytesize.workspace = true
clap.workspace = true
chrono = "0.4.41"
datafusion.workspace = true
duration-str.workspace = true
futures.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tonic.workspace = true
tonic-reflection.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wings-client = { path = "../wings_client" }
wings-flight = { path = "../wings_flight" }
wings-ingestor-core = { path = "../wings_ingestor_core" }
wings-ingestor-http = { path = "../wings_ingestor_http" }
wings-control-plane-core = { path = "../wings_control_plane_core" }
wings-control-plane-memory = { path = "../wings_control_plane_memory" }
wings-observability = { path = "../wings_observability" }
wings-object-store = { path = "../wings_object_store" }
wings-server-core = { path = "../wings_server_core" }
wings-worker = { path = "../wings_worker" }
wings-resources = { path = "../wings_resources" }
wings-schema = { path = "../wings_schema" }
