[package]
name = "wings"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wings"
path = "src/lib.rs"

[[bin]]
name = "wings"
path = "src/main.rs"

[dependencies]
clap.workspace = true
object_store.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true

wings-common.workspace = true
wings-observability.workspace = true
wings-queue.workspace = true
