[package]
name = "wings-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_client"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
prost.workspace = true
snafu.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
wings-control-plane-core = { path = "../wings_control_plane_core" }
wings-flight = { path = "../wings_flight" }
wings-observability = { path = "../wings_observability" }
wings-ingestor-core = { path = "../wings_ingestor_core" }
wings-resources = { path = "../wings_resources" }
wings-schema = { path = "../wings_schema" }
