[package]
name = "wings-common"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wings_common"
path = "src/lib.rs"

[features]
test-util = ["slatedb-common/test-util"]

[dependencies]
async-trait.workspace = true
backon.workspace = true
chrono.workspace = true
slatedb-common.workspace = true
tokio.workspace = true
