[package]
name = "wings-control-plane"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_control_plane"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-ipc.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
bytesize.workspace = true
dashmap.workspace = true
datafusion.workspace = true
flatbuffers.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
moka.workspace = true
object_store.workspace = true
pin-project.workspace = true
serde.workspace = true
parquet.workspace = true
paste.workspace = true
prost.workspace = true
prost-types.workspace = true
snafu.workspace = true
time.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
wings-observability = { path = "../wings_observability" }

[build-dependencies]
tonic-build.workspace = true
