[package]
name = "wings-control-plane-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_control_plane_core"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-ipc.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
bytesize.workspace = true
dashmap.workspace = true
datafusion.workspace = true
deltalake-aws.workspace = true
deltalake-core.workspace = true
flatbuffers.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
iceberg.workspace = true
moka.workspace = true
object_store.workspace = true
pin-project.workspace = true
serde.workspace = true
parquet.workspace = true
paste.workspace = true
prost.workspace = true
prost-types.workspace = true
snafu.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
wings-observability = { path = "../wings_observability" }
wings-resources = { path = "../wings_resources" }
wings-schema = { path = "../wings_schema" }
ulid.workspace = true
uuid.workspace = true
url.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
