[package]
name = "wings-control-plane-memory"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_control_plane_memory"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
object_store.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wings-control-plane-core.path = "../wings_control_plane_core"
wings-observability.path = "../wings_observability"
wings-resources.path = "../wings_resources"
