[package]
name = "wings-control-plane-sql"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_control_plane_sql"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bytesize.workspace = true
snafu.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wings-control-plane-core.path = "../wings_control_plane_core"
wings-observability.path = "../wings_observability"
wings-resources.path = "../wings_resources"
wings-schema.path = "../wings_schema"
