[package]
name = "wings-data-lake"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_data_lake"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
arrow.workspace = true
bytesize.workspace = true
datafusion.workspace = true
deltalake-core.workspace = true
deltalake-aws.workspace = true
iceberg.workspace = true
object_store.workspace = true
parquet.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
ulid.workspace = true
wings-control-plane-core.path = "../wings_control_plane_core"
wings-observability.path = "../wings_observability"
wings-object-store.path = "../wings_object_store"
wings-resources.path = "../wings_resources"
wings-schema.path = "../wings_schema"
