[package]
name = "wings-flight"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_flight"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-stream.workspace = true
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
object_store.workspace = true
pin-project.workspace = true
prost.workspace = true
prost-types.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
wings-control-plane = { path = "../wings_control_plane" }
wings-server-core = { path = "../wings_server_core" }
wings-ingestor-core = { path = "../wings_ingestor_core" }

[build-dependencies]
tonic-build.workspace = true
