[package]
name = "wings-ingestor-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_ingestor_core"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
datafusion.workspace = true
futures-util.workspace = true
object_store.workspace = true
parquet.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid = "1.2.1"
wings-control-plane = { path = "../wings_control_plane" }
wings-observability = { path = "../wings_observability" }

[dev-dependencies]
bytesize.workspace = true
tokio = { workspace = true, features = ["test-util"] }
