[package]
name = "wings-ingestor-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_ingestor_core"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
datafusion.workspace = true
futures-util.workspace = true
object_store.workspace = true
parquet.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
wings-control-plane-core = { path = "../wings_control_plane_core" }
wings-observability = { path = "../wings_observability" }
wings-object-store = { path = "../wings_object_store" }
wings-resources = { path = "../wings_resources" }

[dev-dependencies]
bytesize.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wings-control-plane-memory = { path = "../wings_control_plane_memory" }
wings-schema = { path = "../wings_schema" }
