[package]
name = "wings-ingestor-http"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_ingestor_http"
path = "src/lib.rs"

[dependencies]
arrow-json.workspace = true
axum.workspace = true
datafusion.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
wings-ingestor-core = { path = "../wings_ingestor_core" }
wings-metadata-core = { path = "../wings_metadata_core" }
