[package]
name = "wings-object-store"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_object_store"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
object_store.workspace = true
percent-encoding.workspace = true
snafu.workspace = true
tempfile.workspace = true
wings-control-plane-core.path = "../wings_control_plane_core"
wings-observability.path = "../wings_observability"
wings-resources.path = "../wings_resources"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wings-control-plane-memory = { path = "../wings_control_plane_memory" }
