[package]
name = "wings-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
nu-ansi-term.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

wings-common.workspace = true

[dev-dependencies]
insta.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wings-common = { workspace = true, features = ["test-util"] }
