[package]
name = "wings-query"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_query"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
wings-schema = { path = "../wings_schema" }
wings-resources = { path = "../wings_resources" }
