[package]
name = "wings-queue"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wings_queue"
path = "src/lib.rs"

[dependencies]
backon.workspace = true
binrw.workspace = true
bytes.workspace = true
chrono.workspace = true
object_store.workspace = true
opentelemetry.workspace = true
pretty-hex.workspace = true
prost.workspace = true
prost-types = { workspace = true, features = ["chrono"] }
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
uuid = { version = "1.23.3", features = ["v7"] }

wings-common.workspace = true
wings-observability.workspace = true
zstd = "0.13.3"

[dev-dependencies]
insta.workspace = true
pretty-hex.workspace = true
tokio.workspace = true
wings-common = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-prost-build.workspace = true
