[package]
name = "wings-queue"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wings_queue"
path = "src/lib.rs"

[dependencies]
backon.workspace = true
binrw.workspace = true
bytes.workspace = true
chrono.workspace = true
http.workspace = true
object_store.workspace = true
opentelemetry.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
uuid.workspace = true
zstd.workspace = true

wings-common.workspace = true
wings-observability.workspace = true

[dev-dependencies]
insta.workspace = true
pretty-hex.workspace = true
wings-common = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-prost-build.workspace = true
