[package]
name = "wings-server-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_server_core"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-stream.workspace = true
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
object_store.workspace = true
parquet.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wings-control-plane = { path = "../wings_control_plane" }
wings-object-store = { path = "../wings_object_store" }

[dev-dependencies]
wings-ingestor-core = { path = "../wings_ingestor_core" }
tokio = { workspace = true, features = ["test-util"] }
