[package]
name = "wings-stress"
version = "0.1.0-alpha.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wings-stress"
path = "src/main.rs"

[dependencies]
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
axum.workspace = true
bytesize.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
object_store.workspace = true
rand = "0.10"
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "env-filter",
    "json",
] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
ulid.workspace = true
wings-ingestor-core = { path = "../wings_ingestor_core" }
wings-ingestor-http = { path = "../wings_ingestor_http" }
wings-control-plane-core = { path = "../wings_control_plane_core" }
wings-observability = { path = "../wings_observability" }
wings-client = { path = "../wings_client" }
wings-server-core = { path = "../wings_server_core" }
wings-resources = { path = "../wings_resources" }
wings-schema = { path = "../wings_schema" }
