[package]
name = "wings-stress"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wings_stress"
path = "src/lib.rs"

[[bin]]
name = "wings-stress"
path = "src/main.rs"

[dependencies]
clap.workspace = true
fastrand = "2.3.0"
prost.workspace = true
prost-types.workspace = true
throttled-tracing = "0.1.0"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid = { version = "1.23.3", features = ["v7"] }

wings.workspace = true
wings-common.workspace = true
wings-observability.workspace = true
wings-queue.workspace = true
