[package]
name = "wings-worker"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_worker"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
datafusion.workspace = true
deltalake-core.workspace = true
futures.workspace = true
object_store.workspace = true
opentelemetry_sdk.workspace = true
parquet.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
wings-control-plane-core = { path = "../wings_control_plane_core" }
wings-data-lake = { path = "../wings_data_lake" }
wings-object-store = { path = "../wings_object_store" }
wings-observability = { path = "../wings_observability" }
wings-server-core = { path = "../wings_server_core" }
wings-query = { path = "../wings_query" }
