[package]
name = "wings-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_client"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
prost.workspace = true
snafu.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
wings-control-plane-core.workspace = true
wings-flight.workspace = true
wings-observability.workspace = true
wings-ingestor-core.workspace = true
wings-resources.workspace = true
wings-schema.workspace = true
