[package]
name = "wings-data-lake"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_data_lake"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
arrow.workspace = true
bytesize.workspace = true
datafusion.workspace = true
deltalake-core.workspace = true
deltalake-aws.workspace = true
iceberg.workspace = true
object_store.workspace = true
parquet.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
ulid.workspace = true
wings-control-plane-core.workspace = true
wings-observability.workspace = true
wings-object-store.workspace = true
wings-resources.workspace = true
wings-schema.workspace = true
