[package]
name = "wings-dst-base"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_dst_base"
path = "src/lib.rs"

[features]
test-util = ["tokio/test-util"]

[dependencies]
rand.workspace = true
rand_xoshiro = "0.8.1"
thread_local = "1.1.9"
time.workspace = true
tokio.workspace = true
ulid.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
