[package]
name = "wings-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
nu-ansi-term.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
snafu.workspace = true
strum.workspace = true
time.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
