[package]
name = "wings-schema"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_schema"
path = "src/lib.rs"

[dependencies]
datafusion.workspace = true
deltalake-core.workspace = true
parquet.workspace = true
prost.workspace = true
serde.workspace = true
snafu.workspace = true
tonic.workspace = true
wings-observability.workspace = true

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
